# svn-update

./: .gitignore  CMakeLists.txt  README.md  build.py  vcpkg-config.json  vcpkg.json
src/: CMakeLists.txt  Resource.rc  SvnRepos.cpp  SvnRepos.h  XXX.cpp  svn-update.cpp
